Buttons are vertically aligned on Mobile - solved

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
 
 .container {
   display: block;
-  width: 50%;
   margin: auto;
 }
 
